# BIBBLE

./: .gitignore  env.yaml  langchain_demo.ipynb  setup.cfg
notebooks/: api_test.ipynb  langchain_demo.ipynb  main.ipynb
notebooks/outputs/: output.md  output.txt  steps.txt
