[metadata]
name = auto-research-lab
description = A tool to let agents with different specializations brainstorm to solve a research problem. 
url = https://github.com/crisostomi/auto-research-lab
long_description = file: README.md
author = Donato Crisostomi
author_email = donatocrisostomi@gmail.com
keywords = python
license = MIT Licence

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:
install_requires =
    transformers
    streamlit
    lightning-bolts
    rich
    dvc
    python-dotenv
    matplotlib
    stqdm
    scipy
    openai
    accelerate

[options.packages.find]
where=src

[options.package_data]
* = *.txt, *.md
